css y base.html
cree archivo home y base en html y base.css y cambie de nombre la carpeta Statics a Static

--- a/PregunChaco_App/templates/home.html
+++ b/PregunChaco_App/templates/home.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
+{%extends 'Base.html'%}
+{% load static %}
+
+{%block contenido%}
 	<title>HOME</title>
-</head>
-<body>
-	<h1>PregunChaco</h1>
-</body>
-</html>
+{%endblock contenido%}
