--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -5,6 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="{%static 'css/main.css'%}">
 </head>
 <body>
+	<img src="{%static 'img/g9.png'%}">
 	<h1>PregunChaco</h1>
+
+	{%block contenido%}
+
+	
+	{%endblock contenido%}
+
 </body>
 </html>
