--- a/PregunChaco_App/templates/home.html
+++ b/PregunChaco_App/templates/home.html
@@ -1,6 +1,16 @@
 {%extends 'Base.html'%}
 {% load static %}
 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Home</title>
+</head>
+<body>
+	<h1>home</h1>
 {%block contenido%}
-	<title>HOME</title>
+<h1>home</h1>
 {%endblock contenido%}
+
+</body>
+</html>
