--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -6,5 +6,16 @@
 </head>
 <body>
 	<h1>PregunChaco</h1>
+	<div>
+		<a href="{% url 'login' %}">LOGIN</a>
+	</div>	
+
+
+
+	{%block contenido%}
+
+ 	{%endblock contenido%}
+
+
 </body>
 </html>
