--- a/PregunChaco_App/static/css/main.css
+++ b/PregunChaco_App/static/css/main.css
@@ -1,14 +1,34 @@
-<<<<<<< Updated upstream
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
-:root{
-  --body-font: 'Quicksand', sans-serif;
+:root {
+  --body-font: "Quicksand", sans-serif;
+  --color-light-blue: rgb(149,200,233);
 }
 
-h1{
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border-bottom: 1px solid rgba(229,231,235);
+  -webkit-text-fill-color: black;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+*{
+  color: #111827;
   font-family: var(--body-font);
-=======
-h1{
-	color: green;
->>>>>>> Stashed changes
+}
+
+.logo {
+  width: 6rem;
+}
+
+.btn {
+  background: var(--color-light-blue);
+  color: white;
 }
