--- a/PregunChaco_App/templates/usuarios/login.html
+++ b/PregunChaco_App/templates/usuarios/login.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 
 {%block contenido%}
-
+  
 	<form method="POST">{% csrf_token %}
 		{{form.errors}}
 		<input type="text" name="username" placeholder="USUARIO">
@@ -10,5 +10,7 @@
 		<input type="submit" name="" value="LOGIN">
 
 	</form>
+
+  <a href="{% url 'home' %}">Volver al Home</a>
 
 {%endblock contenido%}
