--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -2,19 +2,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <!-- Enlace con el css -->
 	<link rel="stylesheet" type="text/css" href="{%static 'css/main.css'%}">
+
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <!-- Icono de la paguina -->
+  <link rel="icon" type="image.png" href="{%static 'img/g9.png'%} ">
+
+  <title>PregunChaco</title>
+
 </head>
 <body>
-
-  <div>
-    <img src="{% static 'img/g9.png' %}" class="logo">
-    <nav>
-      <a href="{% url 'home' %}">Home</a>
-      <a href="{% url 'login' %}">LOGIN</a>
-    </nav>
+  <div class="contenedorPadre" >
+      <div class="contenedor contenedor1"  >
+           <img src="{% static 'img/g9.png' %}" class="logo">
+           <div class="tytle Nombre"> 
+              PregunChaco
+           </div>
+     </div>
+     <div class="contenedor contenedor2">
+          <a href="{% url 'login' %}" class="Boton_Login">Ingresar</a>
+      </div>
   </div>
-
 
 	{%block contenido%}
 
@@ -23,3 +33,5 @@
 
 </body>
 </html>
+
+
