--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -8,7 +8,7 @@
 
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <!-- Icono de la paguina -->
-  <link rel="icon" type="image.png" href="{%static 'img/g9.png'%} ">
+  <link rel="icon" type="image.png" href="{%static 'img/base/g9.png'%} ">
 
   <title>PregunChaco</title>
 
@@ -16,7 +16,7 @@
 <body>
   <div class="contenedorPadre" >
       <div class="contenedor contenedor1"  >
-           <img src="{% static 'img/g9.png' %}" class="logo">
+           <img src="{% static 'img/base/g9.png' %}" class="logo">
            <div class="tytle Nombre"> 
               PregunChaco
            </div>
