Eliminado | Clases no utilizadas

--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <!-- Enlace con el css -->
 	<link rel="stylesheet" type="text/css" href="{%static 'css/main.css'%}">
-
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-  <!-- Icono de la paguina -->
-  <link rel="icon" type="image.png" href="{%static 'img/g9.png'%} ">
 
+  <!-- Icono de la pagina -->
+  <link rel="icon" type="image.png" href="{%static 'img/g9.png'%} ">
   <title>PregunChaco</title>
 
 </head>
