--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -22,9 +22,22 @@
               PregunChaco
            </div>
      </div>
-     <div class="contenedor contenedor2">
-          <a href="{% url 'login' %}" class="Boton_Login">Ingresar</a>
+
+      {% if user.is_authenticated %}
+      <div class="contenedor contenedor2">
+        <span class="mr-2 uppercase font-bold">
+          {{ user.username }}
+        </span>
+        <a href="{% url 'logout' %}" class="Boton_Login">Salir</a>
       </div>
+
+      {% else %}
+      <div class="contenedor contenedor2">
+        <a href="{% url 'login' %}" class="Boton_Login">Ingresar</a>
+      </div>
+
+      {% endif %}
+
   </div>
 	{%block contenido%}
 
