Agregado | Inicio Juego

--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, user-scalable=no">
   <!-- Enlace con el css -->
 	<link rel="stylesheet" type="text/css" href="{%static 'css/main.css'%}">
+	<link rel="stylesheet" type="text/css" href="{%static 'css/home.css'%}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
   <!-- Icono de la pagina -->
