--- a/PregunChaco_App/templates/usuarios/register.html
+++ b/PregunChaco_App/templates/usuarios/register.html
@@ -23,9 +23,11 @@
 
     <div class="text-right">
       <input type="reset" value="Limpiar"
-        class="cursor-pointer p-3 mt-4 mr-2 text-white rounded-md bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
+        class="cursor-pointer p-3 mt-4 mr-2 text-white rounded-md 
+        bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
       <input type="submit" value="Registrar"
-        class="cursor-pointer p-3 mt-4 text-white rounded-md bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
+        class="cursor-pointer p-3 mt-4 text-white rounded-md 
+        bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
     </div>
   </form>
 </div>
