--- a/PregunChaco_App/templates/home.html
+++ b/PregunChaco_App/templates/home.html
@@ -29,7 +29,8 @@
 
         {% if user.is_authenticated %}
           <a href="{% url 'inicio' %}"
-          class="cursor-pointer p-6 font-bold text-2xl text-white rounded-xl bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
+          class="cursor-pointer p-6 font-bold text-2xl text-white rounded-xl bg-gradient-to-r
+           from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
           Comienza Ahora!
           </a>
  
@@ -52,11 +53,11 @@
               class='border-b col-span-2 p-3 mt-2 mb-10 focus:outline-none'>
 
             <button type="submit"
-              class="p-2 mt-4 text-white rounded-full bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
+              class="p-2 mt-4 text-white rounded-full  bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
               Ingresar
             </button>
             <a href="{% url 'usuarios:register' %}"
-              class="cursor-pointer p-2 mt-4 text-white rounded-full bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500">
+              class="cursor-pointer p-2 mt-4 text-white rounded-full bg-gradient-to-r from-green-400 to-blue-400 hover:from-green-500 hover:to-blue-500 shadow-lg">
               Registrarse
             </a>
           <a href="#" class="mt-4 col-span-2">¿Has olvidado la contraseña?</a></span>
