--- a/PregunChaco_App/static/css/home.css
+++ b/PregunChaco_App/static/css/home.css
@@ -56,13 +56,17 @@
 	border-radius: 35px;
 	box-shadow: 2px 2px 5px #A7A7A7;
 
+	padding: 2%;
+	padding-top: 3%;
+
 }
 .ImagenCarpincho{
 	width: 75%;
 	height: 75%;
 	margin: auto;
+	padding-bottom: 10%;
 }
-.Titulo1{
+.Titulo1{	/*PregunChaco*/
 	align-content: center;
 	color: black;
 	font-family: Quicksand;
@@ -78,4 +82,75 @@
 	font-family: Quicksand;
 	text-align: center;
 	font-size: 140%;
+}
+.Titulo2{ /*¡Bienvenido a PregunChaco!*/
+	align-content: center;
+	color: black;
+	font-family: Quicksand;
+	text-align: left;
+	line-height: 100%;
+	font-size: 150%;
+	font-weight: bold;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	padding-left: 5%; 
+	color: #1830FF;
+	text-shadow: 2px 2px 5px #A7A7A7;
+}
+
+.Texto2{
+	align-content: center;
+	color: black;
+	font-family: Quicksand;
+	text-align: left;
+	font-size: 120%;
+	padding-left: 3%;
+	text-indent: 10px;
+}
+
+.Texto3{  /* texto Iniciar secion*/
+	align-content: center;
+	color: black;
+	font-family: Quicksand;
+	text-align: center;
+	font-size: 120%;
+	padding-bottom: 2.5%; 
+	padding-top: 3%;
+	font-weight: bold;
+
+}
+
+.Boton{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	border-radius: 15px;
+	width: 40%;
+	height: 30%;
+	box-shadow: 2px 2px 5px #A7A7A7;
+	margin: auto;
+	align-items: center;
+	justify-content: space-around;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	margin-top: 8px;
+}
+.Texto4{
+	color: black;
+	font-family: Quicksand;
+	padding-top: 8%;
+}
+.Formulario{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+.Campos{
+	width: 90%;
+	height: 90%;
+	border-radius: 7px;
+	padding-bottom: 1%;
+	padding-top: 2%;
+	padding-left: 1.5%;
+	margin: 3px;
 }
