--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -9,6 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="{%static 'css/main.css'%}">
 	<link rel="stylesheet" type="text/css" href="{%static 'css/home.css'%}">
 	<link rel="stylesheet" type="text/css" href="{%static 'css/game/inicio.css'%}">
+  <link rel="stylesheet" type="text/css" href="{%static 'css/game/categorias.css'%}">
+  <link rel="stylesheet" type="text/css" href="{%static 'css/game/modo.css'%}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
   <!-- Icono de la pagina -->
