--- a/PregunChaco_App/templates/game/modo.html
+++ b/PregunChaco_App/templates/game/modo.html
@@ -8,6 +8,22 @@
   <a href="{% url 'inicio' %}" class="bg-blue-400 hover:bg-blue-500 text-xl p-3 mt-4 text-white rounded-xl">
     Volver
   </a>
+
+  	<div class="Box2">
+  		
+  		<div class="Modo Modo1">
+  			<a href="">
+  				<img src="{% static 'img/game/Modo/cat_personajes_01.svg' %}">
+  			</a>
+  		</div>
+  		<div class="Modo Modo2"> 
+  			<a href="categorias">
+  				<img src="{% static 'img/game/Modo/cat_personajes_02.svg' %}">
+  			</a>
+  		</div>
+
+  	</div>
+
 </div>
 
 {% endblock contenido %}
