--- a/PregunChaco_App/templates/game/modo.html
+++ b/PregunChaco_App/templates/game/modo.html
@@ -17,7 +17,7 @@
   			</a>
   		</div>
   		<div class="Modo Modo2"> 
-  			<a href="categorias">
+  			<a href="{% url 'pregunta:categoria' %}">
   				<img src="{% static 'img/game/Modo/cat_personajes_02.svg' %}">
   			</a>
   		</div>
