--- a/PregunChaco_App/templates/game/preguntas.html
+++ b/PregunChaco_App/templates/game/preguntas.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 	{% block contenido %}
+    {% for c in preguntas %}
 
+        
+          
+          <p class="TextCat TextCat1">{{c}}</p>
+        
+
+    
+    {% endfor %}
 	{% endblock contenido %}
 </body>
 </html>
