--- a/PregunChaco_App/templates/game/categorias.html
+++ b/PregunChaco_App/templates/game/categorias.html
@@ -21,7 +21,7 @@
     {% for c in categorias %}
       <div class="Cat Categoria{{c.id}}">
 
-        <a href="{% url 'pregunta:filtradas' c.id  %}">
+        <a href="{% url 'pregunta:jugar' c.id  %}">
           <img src="{% static ''%}img/game/categorias/personaje_0{{c.id}}.svg">
           <p class="TextCat TextCat1">{{c}}</p>
         </a>
