--- a/PregunChaco_App/templates/game/inicio.html
+++ b/PregunChaco_App/templates/game/inicio.html
@@ -26,7 +26,7 @@
     <div class="grid grid-cols-4 content-center">
       <img src="{% static 'img/game/personaje1.svg' %}" alt="Jugar" class="col-span-4 mx-auto w-1/2">
       <a href="{% url 'modo' %}"
-          class="text-center shadow-lg col-start-2 col-span-2 font-bold text-6xl p-3 text-white rounded-xl bg-blue-400 hover:bg-blue-500">
+          class="animate-pulse text-center shadow-lg col-start-2 col-span-2 font-bold text-6xl p-3 text-white rounded-xl bg-blue-400 hover:bg-blue-500">
           Jugar
       </a>
     </div>
