cambios en diseño del base

--- a/PregunChaco_App/static/css/game/categorias.css
+++ b/PregunChaco_App/static/css/game/categorias.css
@@ -12,34 +12,57 @@
 .Cat{
 	width: 20%;
 	margin: 1%;
+	align-content: center;
+	justify-content: center;
+	cursor: pointer;
+
 }
 
 .TextCat{
-	width: 60%;
-	height: 30%;
+	width: 80%;
+	height: 20%;
 	border-radius: 25px;
 	align-self: center;
-	font-size: large;
+	align-content: center;
+	font-size: 170%;
+	justify-content: center;
+	font-weight: bold;
+	cursor: pointer;
+
 }
 
 .TextCat1{   /*Geografia */
-	background-color: #105699; 
+	background-color: #105699;
+	border-color: #03498c;
+	color:#ffffff;
 }
 .TextCat2{  /* Cultura y Arte */  
 	background-color: #B51D54;
+	border-color: #03498c;
+	color:#ffffff;
 }
 .TextCat3{  /* Hisoria */ 
 	background-color: #BBA730;
+	border-color: #03498c;
+	color:#ffffff;
 }
 .TextCat4{  /* Deporte */
 	background-color: #D07E1C;
+	border-color: #03498c;
+	color:#ffffff;
 }
 .TextCat5{  /* Economia */
 	background-color: #65318A;
+	border-color: #03498c;
+	color:#ffffff;
 }
 .TextCat6{  /* Ciencia y Educacion */
 	background-color: #16954D;
+	border-color: #03498c;
+	color:#ffffff;
 }
 .TextCat7{  /* Entreteniminto */
 	background-color: #B43D81;
+	border-color: #03498c;
+	color:#ffffff;
 }
