--- a/PregunChaco_App/static/css/main.css
+++ b/PregunChaco_App/static/css/main.css
@@ -32,6 +32,17 @@ select:-webkit-autofill:focus {
   width: 4rem;
 }
 
+.logoS{
+  width: 4rem;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.logoR{
+  width: 4rem;
+  padding-right: 10px;
+  padding-left: 10px;
+}
 .contenedorPadre {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -56,22 +67,6 @@ select:-webkit-autofill:focus {
   flex-direction: row;
   align-items: center;
   justify-content: space-between; 
-}
-
-.Boton_Login{
-  padding: 3px;
-  padding-left: 10px;
-  padding-right: 25px; 
-  color: white;
-  cursor: pointer;
-
-  background: -webkit-linear-gradient(right,#2FECC1,#3BF5E6,#2FEC52);
-
-  border-radius: 35px;
-  font-weight: bold;
-  font-size: large;
-  width: 125px; 
-  text-align: center;
 }
 
 .Nombre{
