Cambios Diseño Preguntas

--- a/PregunChaco_App/templates/Base.html
+++ b/PregunChaco_App/templates/Base.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="{%static 'css/game/inicio.css'%}">
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/categorias.css'%}">
   <link rel="stylesheet" type="text/css" href="{%static 'css/game/modo.css'%}">
+  <link rel="stylesheet" type="text/css" href="{%static 'css/game/preguntas.css'%}">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
   <!-- Icono de la pagina -->
