--- a/PregunChaco_App/templates/game/modo.html
+++ b/PregunChaco_App/templates/game/modo.html
@@ -10,9 +10,8 @@
   </a>
 
   	<div class="Box2">
-  		
   		<div class="Modo Modo1">
-  			<a href="">
+  			<a href="{% url 'pregunta:jugar' Cat  %}">
   				<img src="{% static 'img/game/Modo/cat_personajes_01.svg' %}">
   			</a>
   		</div>
