--- a/PregunChaco_App/static/css/game/preguntas.css
+++ b/PregunChaco_App/static/css/game/preguntas.css
@@ -44,12 +44,21 @@
 	padding-bottom: 20px;
 	padding-left: 20px;
 	padding-right: 20PX;
+	word-wrap: break-word
 }
 .BEnviar{
-	width: 2000px;
+	width: 250px;
 	height: 70px;
 	padding-bottom: 10px;
 	justify-content: flex-end;
+	border-color: black;
+	border-width: thin;
+	border-style: solid;
+	background-color: green;
+	border-radius: 30px;
+	font-size: x-large;
+	font-weight: bold;
+
 }
 .check{
 	text-indent: 25px;
